[gd_scene load_steps=7 format=3 uid="uid://pk1lu52dxw0p"]

[ext_resource type="Script" path="res://scenes/plank.gd" id="1_rejyp"]
[ext_resource type="Texture2D" uid="uid://beo6vxpjr5ak6" path="res://assets/plank.png" id="2_hwpqx"]

[sub_resource type="Animation" id="Animation_pif5x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qpnlp"]
resource_name = "wobble"
length = 0.27
step = 0.015
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:rotation")
tracks/0/interp = 4
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.045, 0.09, 0.135, 0.18, 0.225, 0.27),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.141372, 0.0, -0.141372, 0.0, 0.141372, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4pgyn"]
_data = {
"RESET": SubResource("Animation_pif5x"),
"wobble": SubResource("Animation_qpnlp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xulgv"]
size = Vector2(29.5, 13)

[node name="plank" type="RigidBody2D"]
gravity_scale = 0.0
lock_rotation = true
freeze = true
freeze_mode = 1
script = ExtResource("1_rejyp")

[node name="sprite" type="Sprite2D" parent="."]
scale = Vector2(0.470588, 0.470588)
texture = ExtResource("2_hwpqx")

[node name="wobbler" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4pgyn")
}

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(-4.75, 6.5)
shape = SubResource("RectangleShape2D_xulgv")

[node name="despawn_timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="animation_finished" from="wobbler" to="." method="_on_wobbler_animation_finished"]
[connection signal="timeout" from="despawn_timer" to="." method="_on_despawn_timer_timeout"]
